<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

    <TextView
        android:id="@+id/whatsapp_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/whatsapp_heading"
        android:textSize="14dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/whatsapp_help"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/whatsapp_description" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below = "@id/textView2"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:autoLink="all"
        android:text="@string/whatsapp_download" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/app_help"
        android:textSize="14dp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/adding_customer_help" />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView5"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/name_help" />
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView6"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/phone_help" />
    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView7"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/EMAIL_help" />
    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView8"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/Amount_due_help"/>

</RelativeLayout>